# flet-iap

./: .gitignore  pyproject.toml
src/flet_iap/: __init__.py  iap.py  in_app_purchase.py
src/flutter/flet_iap/: README.md  pubspec.yaml
src/flutter/flet_iap/lib/src/: create_control.dart  in_app_purchase.dart
